# krossmail-labs

./: .gitignore  CLAUDE.md  PLAN.md  README.md  docker-compose.yml  package-lock.json  package.json  social-media-plan.md
.github/workflows/: ci.yml
fine-tuning/: .env.example  README.md  eval.py  finetuning.md  pyproject.toml  train.py
fine-tuning/pipeline/: config.py  run.py
fine-tuning/pipeline/agents/: email_gen.py  labeler.py  quality.py  scenario.py
fine-tuning/pipeline/normalisers/: aeslc.py  base.py  classifier.py  enron.py  intent.py
frontend/: package-lock.json  package.json  vitest.config.ts
frontend/kross-landing/: package-lock.json  package.json
services/ai-service/: Dockerfile  package.json  pyproject.toml
services/auth-service/: Dockerfile  package.json  pyproject.toml
services/calendar-service/: Dockerfile  package.json  pyproject.toml
services/file-service/: Dockerfile  package.json  pyproject.toml
services/notification-service/: Dockerfile  package.json  pyproject.toml
services/rag-service/: Dockerfile  package.json  pyproject.toml
services/sync-service/: Dockerfile  package.json  pyproject.toml
services/sync-service/src/: config.py  index.ts  main.py  server.ts
services/sync-service/test/: health.test.ts
services/sync-service/tests/: test_health.py
stitch_unified_chat_inbox/chat_inbox_v2_refined/: code.html
stitch_unified_chat_inbox/chat_style_inbox/: code.html
stitch_unified_chat_inbox/classic_inbox/: code.html
stitch_unified_chat_inbox/classic_inbox_v2_high_hierarchy/: code.html
terraform/bootstrap/: main.tf
(+66 files in other folders)
