[project]
name = "kross-fine-tuning"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "datasets>=3.0",
    "openai>=1.30",
    "jsonlines>=4.0",
    "tqdm>=4.66",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "python-dotenv>=1.0",
    "aiohttp>=3.9",
    "tiktoken>=0.7",
]

[project.optional-dependencies]
train = [
    "unsloth>=2024.11",
    "trl>=0.12",
    "peft>=0.13",
    "transformers>=4.46",
    "torch>=2.4",
    "evaluate>=0.4",
    "rouge-score>=0.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["pipeline"]
